--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 header {
-    background-color: #f0f0f0;
+    background-color: #4e20a3;
     padding: 20px;
     text-align: center;
 }
