--- a/style.css
+++ b/style.css
@@ -51,3 +51,20 @@ body {
   button:hover {
     background-color: #3e8e41;
   }
+  #sobre-agrinho {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+  }
+  
+  .logo {
+    width: 100px;
+    height: 100px;
+    margin: 20px;
+    border-radius: 50%;
+  }
+  
+  #sobre-agrinho p {
+    margin-bottom: 20px;
+  }
