--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body {
     font-family: Arial, sans-serif;
     text-align: center;
-    background-color: aliceblue;
+    background-color: rgb(120, 178, 196);
   }
   
   header {
