--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
   }
   
   header {
-    background-color: #f0f0f0;
+    background-color: rgb(120, 178, 196);
     padding: 20px;
     text-align: center;
   }
