--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
   }
   
   header {
-    background-color: #ccc;
+    background-color: #000000;
     padding: 20px;
     text-align: center;
   }
