--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ body {
   }
   
   button:hover {
-    background-color: #3e8e41;
+    background-color: #22cc6e;
   }
   #sobre-agrinho {
     display: flex;
