--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ section {
 
 button {
   background-color: #03eb0b;
-  color: black;
+  color: rgb(28, 31, 182);
   padding: 10px 20px;
   border: none;
   border-radius: 5px;
