--- a/style.css
+++ b/style.css
@@ -76,6 +76,14 @@ h1 {
   background-color: black;
 }
 
+h2{
+  border: 10px solid;
+  padding: 10px;
+  background-color: black;
+  color: #22cc6e;
+  border: 10px solid;
+}
+
 h3{
 border: 10px solid;
 padding: 10px;
