--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body {
   font-family: Arial, sans-serif;
   text-align: center;
-  background-color: gray;
+  background-color:  #d3d3d3;
 }
 
 header {
