--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body {
   font-family: Arial, sans-serif;
   text-align: center;
-  background-color:  #ffc0cb;
+ background-color: #00FFFF;
 }
 
 header {
