--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ header {
 }
 
 main {
-  background-color:  #ffc0cb;
+  background-color:  #4169e1;
   display: flex;
   flex-direction: column;
   align-items: center;
