--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ header {
 }
 
 main {
-  background-color:  #4169e1;
+  background-color:  #ffc0cb;
   display: flex;
   flex-direction: column;
   align-items: center;
