--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
   font-family: Arial, sans-serif;
   text-align: center;
  background-color:  #4169e1;
- color: #00FFFF;
+ color: #228b22;
 }
 
 header {
