--- a/style.css
+++ b/style.css
@@ -3,11 +3,11 @@ body {
   font-family: Arial, sans-serif;
   text-align: center;
  background-color:  #4169e1;
- color: #00ff00;
+ color: #00FFFF;
 }
 
 header {
- background-color: #2f4538;
+ background-color:  #2f4538;
   padding: 20px;
   text-align: center;
 }
