--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ section {
 
 #farm-list li {
   padding: 10px;
-  border-bottom: 1px solid #ccc;
+  border-bottom: 1px solid #a01818;
 }
 
 #farm-list li:last-child {
