--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body {
   font-family: Arial, sans-serif;
   text-align: center;
- background-color:  #4169e1;
+ background-color: #2f4538;
  color: #228b22;
 }
 
