--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ section {
 
 button {
   background-color: #03eb0b;
-  color: rgb(28, 31, 182);
+  color: #228b22;
   padding: 10px 20px;
   border: none;
   border-radius: 5px;
