--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ section {
 
 button {
   background-color: #2f4538;
-  color: #228b22;
+  color: #2f4538;
   padding: 10px 20px;
   border: none;
   border-radius: 5px;
