--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ section {
 }
 
 button {
-  background-color: #2f4538;
+  background-color: #228b22;
   color: #2f4538;
   padding: 10px 20px;
   border: none;
