--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ main {
 }
 
 section {
-  background-color: #fff;
+  background-color: #07b7ec;
   padding: 20px;
   margin-bottom: 20px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
