--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
   body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
-    color: #333;
+    color: #F9F9F9;
     background-color: #f9f9f9;
   }
   
