--- a/style.css
+++ b/style.css
@@ -17,11 +17,10 @@
     background-color: #F9F9F9;
   }
   
-  h1, h2, h3, h4, h5, h6 {
-    font-weight: bold;
-    color: #333;
-    margin-bottom: 10px;
+  h1, h2, h3, h4, h5, h6, p {
+    color: #333; /* preto */
   }
+  
   
   p {
     margin-bottom: 20px;
