--- a/style.css
+++ b/style.css
@@ -11,10 +11,7 @@
   }
   
   body {
-    font-family: Arial, sans-serif;
-    line-height: 1.6;
-    color: #F9F9F9;
-    background-color: #F9F9F9;
+    background-color: #F0F2F0; /* um verde-terroso suave */
   }
   
   h1, h2, h3, h4, h5, h6, p {
