--- a/style.css
+++ b/style.css
@@ -1,42 +1,7 @@
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-}
+/* estilo.css */
 
-header {
-  background-color: #333;
-  color: #fff;
-  padding: 20px;
-  text-align: center;
-}
+/* Global Styles */
 
-header h1 {
-  font-size: 24px;
-  margin: 0;
-}
-
-nav ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-nav li {
-  display: inline-block;
-  margin-right: 20px;
-}
-
-/* Cores */
-:root {
-  --cor-principal: #8B9467; /* Cor principal do site */
-  --cor-secundaria: #F7D2C4; /* Cor secundária do site */
-  --cor-terciaria: #45B3FA; /* Cor terciária do site */
-  --cor-texto: #333; /* Cor do texto */
-  --cor-fundo: #F7F7F7; /* Cor do fundo */
-}
-
-/* Global */
 * {
   box-sizing: border-box;
   margin: 0;
@@ -45,30 +10,57 @@ nav li {
 
 body {
   font-family: Arial, sans-serif;
-  background-color: var(--cor-fundo);
-  color: var(--cor-texto);
+  line-height: 1.6;
+  color: #333;
+  background-color: #f9f9f9;
 }
 
-/* Header */
+h1, h2, h3, h4, h5, h6 {
+  font-weight: bold;
+  color: #333;
+}
+
+p {
+  margin-bottom: 20px;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+li {
+  margin-bottom: 10px;
+}
+
+a {
+  text-decoration: none;
+  color: #337ab7;
+}
+
+a:hover {
+  color: #23527c;
+}
+
+/* Header Styles */
+
 header {
-  background-color: var(--cor-principal);
+  background-color: #337ab7;
   padding: 20px;
   text-align: center;
   color: #fff;
 }
 
 header h1 {
-  font-size: 24px;
-  margin: 0;
+  margin-bottom: 10px;
 }
 
-/* Nav */
 nav ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
   display: flex;
   justify-content: space-between;
+  margin: 0;
+  padding: 0;
 }
 
 nav li {
@@ -77,15 +69,14 @@ nav li {
 
 nav a {
   color: #fff;
-  text-decoration: none;
-  transition: color 0.2s ease;
 }
 
 nav a:hover {
-  color: var(--cor-secundaria);
+  color: #ccc;
 }
 
-/* Main */
+/* Main Styles */
+
 main {
   display: flex;
   flex-direction: column;
@@ -94,43 +85,32 @@ main {
 }
 
 section {
-  background-color: var(--cor-fundo);
+  background-color: #fff;
   padding: 20px;
   margin-bottom: 20px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  border-radius: 10px;
 }
 
-h2 {
-  font-size: 18px;
-  margin: 0;
-  color: var(--cor-principal);
+section h2 {
+  margin-top: 0;
 }
 
-ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
+section img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  margin-bottom: 20px;
 }
 
-li {
-  margin-bottom: 10px;
-}
+/* Footer Styles */
 
-/* Footer */
 footer {
-  background-color: var(--cor-principal);
+  background-color: #337ab7;
   padding: 10px;
   text-align: center;
   color: #fff;
-  clear: both;
 }
 
-/* Efeitos */
-.slide {
-  transition: height 0.5s ease;
-}
-
-.fade {
-  transition: opacity 0.5s ease;
+footer p {
+  margin-bottom: 0;
 }
