--- a/style.css
+++ b/style.css
@@ -1,7 +1,14 @@
 /* estilo.css */
 
-/* Global Styles */
+/* Cores */
+:root {
+  --primary-color: #8B9467; /* Verde-oliva */
+  --secondary-color: #F7D2C4; /* Amarelo-creme */
+  --background-color: #F2F2F2; /* Branco-creme */
+  --text-color: #333; /* Preto */
+}
 
+/* Global */
 * {
   box-sizing: border-box;
   margin: 0;
@@ -10,107 +17,76 @@
 
 body {
   font-family: Arial, sans-serif;
-  line-height: 1.6;
-  color: #333;
-  background-color: #f9f9f9;
+  background-color: var(--background-color);
+  color: var(--text-color);
 }
-
-h1, h2, h3, h4, h5, h6 {
-  font-weight: bold;
-  color: #333;
-}
-
-p {
-  margin-bottom: 20px;
-}
-
-ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-li {
-  margin-bottom: 10px;
-}
-
-a {
-  text-decoration: none;
-  color: #337ab7;
-}
-
-a:hover {
-  color: #23527c;
-}
-
-/* Header Styles */
 
 header {
-  background-color: #337ab7;
+  background-color: var(--primary-color);
   padding: 20px;
   text-align: center;
-  color: #fff;
 }
 
 header h1 {
+  color: #fff;
+  font-size: 24px;
   margin-bottom: 10px;
 }
 
-nav ul {
-  display: flex;
-  justify-content: space-between;
-  margin: 0;
-  padding: 0;
+nav {
+  background-color: var(--secondary-color);
+  padding: 10px;
+  text-align: center;
 }
 
-nav li {
-  margin-right: 20px;
+nav h2 {
+  color: var(--text-color);
+  font-size: 18px;
+  margin-bottom: 10px;
+  cursor: pointer;
 }
 
-nav a {
+nav h2:hover {
+  background-color: var(--primary-color);
   color: #fff;
 }
 
-nav a:hover {
-  color: #ccc;
-}
-
-/* Main Styles */
-
 main {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
   padding: 20px;
 }
 
 section {
-  background-color: #fff;
+  background-color: var(--background-color);
   padding: 20px;
-  margin-bottom: 20px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  margin: 20px;
+  width: calc(33.33% - 40px);
 }
 
 section h2 {
-  margin-top: 0;
+  color: var(--primary-color);
+  font-size: 18px;
+  margin-bottom: 10px;
 }
 
 section img {
   width: 100%;
-  height: 200px;
+  height: 150px;
   object-fit: cover;
-  margin-bottom: 20px;
+  border-radius: 10px;
+  margin-bottom: 10px;
 }
 
-/* Footer Styles */
-
 footer {
-  background-color: #337ab7;
+  background-color: var(--primary-color);
   padding: 10px;
   text-align: center;
   color: #fff;
 }
 
 footer p {
-  margin-bottom: 0;
+  font-size: 14px;
+  margin-bottom: 10px;
 }
