--- a/style.css
+++ b/style.css
@@ -1,92 +1,21 @@
-/* estilo.css */
+/* styles.css */
 
-/* Cores */
-:root {
-  --primary-color: #8B9467; /* Verde-oliva */
-  --secondary-color: #F7D2C4; /* Amarelo-creme */
-  --background-color: #F2F2F2; /* Branco-creme */
-  --text-color: #333; /* Preto */
-}
-
-/* Global */
-* {
-  box-sizing: border-box;
+body {
+  font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
 }
 
-body {
-  font-family: Arial, sans-serif;
-  background-color: var(--background-color);
-  color: var(--text-color);
-}
-
 header {
-  background-color: var(--primary-color);
+  background-color: #333;
+  color: #fff;
   padding: 20px;
   text-align: center;
 }
 
-header h1 {
-  color: #fff;
-  font-size: 24px;
-  margin-bottom: 10px;
-}
-
-nav {
-  background-color: var(--secondary-color);
-  padding: 10px;
-  text-align: center;
-}
-
-nav h2 {
-  color: var(--text-color);
-  font-size: 18px;
-  margin-bottom: 10px;
-  cursor: pointer;
-}
-
-nav h2:hover {
-  background-color: var(--primary-color);
-  color: #fff;
-}
-
-main {
+nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  padding: 20px;
-}
-
-section {
-  background-color: var(--background-color);
-  padding: 20px;
-  margin: 20px;
-  width: calc(33.33% - 40px);
-}
-
-section h2 {
-  color: var(--primary-color);
-  font-size: 18px;
-  margin-bottom: 10px;
-}
-
-section img {
-  width: 100%;
-  height: 150px;
-  object-fit: cover;
-  border-radius: 10px;
-  margin-bottom: 10px;
-}
-
-footer {
-  background-color: var(--primary-color);
-  padding: 10px;
-  text-align: center;
-  color: #fff;
-}
-
-footer p {
-  font-size: 14px;
-  margin-bottom: 10px;
-}
+  justify-content: space
