--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ section img {
 /* Footer Styles */
 
 footer {
-  background-color: #337ab7;
+  background-color: green;
   padding: 10px;
   text-align: center;
   color: #fff;
