--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ a:hover {
 /* Header Styles */
 
 header {
-  background-color: #337ab7;
+  background-color: green;
   padding: 20px;
   text-align: center;
   color: #fff;
