--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
   font-family: Arial, sans-serif;
   line-height: 1.6;
   color: #333;
-  background-color: #f9f9f9;
+  background-color: green;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -107,7 +107,7 @@ section img {
 
 footer {
   background-color: green;
-  padding: 10px;
+  padding: 50px;
   text-align: center;
   color: #fff;
 }
