--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ section img {
 /* Footer Styles */
 
 footer {
-  background-color: green;
+  background-color: purple;
   padding: 50px;
   text-align: center;
   color: #fff;
