--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
   font-family: Arial, sans-serif;
   line-height: 1.6;
   color: #333;
-  background-color: green;
+  background-color: purple;
 }
 
 h1, h2, h3, h4, h5, h6 {
