--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ a:hover {
 /* Header Styles */
 
 header {
-  background-color: purple;
+  background-color: #C7B8EA;
   padding: 20px;
   text-align: center;
   color: #fff;
