--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ nav ul {
   list-style: none;
   margin: 0;
   padding: 0;
-  display: inline;
+  display: flex;
   justify-content: space-between;
 }
 
