--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ nav a:hover {
 }
 
 main {
-  display: inline-block;
+  display: inline-flex;
   flex-direction: column;
   align-items: center;
   padding: 2em;
