--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ nav a:hover {
 }
 
 main {
-  display: inline-flex;
+  display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
