--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   font-family: Open Sans, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #C6E2B5;
+  background-color: #ffffff;
 }
 
 header {
