--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   font-family: Open Sans, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #ffffff;
+  background-color: #34C759;
 }
 
 header {
@@ -41,4 +41,4 @@ main {
 }
 
 section {
-  background-color: green; /*
+  background-color: #34C759; /*
