--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   font-family: Open Sans, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #34C759;
+  background-color: #ffffff;
 }
 
 header {
